8277845: Clean up use if ProgrammableInvoker/UpcallHandler.USE_INTRINSICS in tests.
Reviewed-by: mcimadamore